[gd_scene load_steps=12 format=3 uid="uid://cvcv2rfxcmlsy"]

[ext_resource type="Script" path="res://scripts/ui/buy_menu_button.gd" id="1_g6vep"]
[ext_resource type="FontFile" uid="uid://cye4dst74ga0q" path="res://font/HoltwoodOneSC.ttf" id="1_m7kia"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2612h"]
content_margin_left = 50.0
content_margin_top = 20.0
content_margin_bottom = 50.0

[sub_resource type="LabelSettings" id="LabelSettings_tymto"]
font = ExtResource("1_m7kia")
font_size = 20

[sub_resource type="Gradient" id="Gradient_t4x04"]
offsets = PackedFloat32Array(0.994048, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pi6ql"]
gradient = SubResource("Gradient_t4x04")

[sub_resource type="LabelSettings" id="LabelSettings_aw74w"]
font = ExtResource("1_m7kia")
font_size = 20

[sub_resource type="LabelSettings" id="LabelSettings_eup3v"]
font = ExtResource("1_m7kia")
font_size = 20

[sub_resource type="Gradient" id="Gradient_nogdu"]
offsets = PackedFloat32Array(0.992647, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_hlgcd"]
gradient = SubResource("Gradient_nogdu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_m8evj"]
texture = SubResource("GradientTexture1D_hlgcd")
texture_margin_top = 20.0
texture_margin_bottom = 20.0

[node name="BuyMenuButton" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6vep")

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Main"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_2612h")
text = "Nom de la compétence"
label_settings = SubResource("LabelSettings_tymto")

[node name="MainContent" type="HBoxContainer" parent="Main"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginImage" type="MarginContainer" parent="Main/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="ImageCompetence" type="TextureRect" parent="Main/MainContent/MarginImage"]
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("GradientTexture1D_pi6ql")

[node name="Info" type="VBoxContainer" parent="Main/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="Info_base" type="HBoxContainer" parent="Main/MainContent/Info"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Description" type="Label" parent="Main/MainContent/Info/Info_base"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Je suis la description de ma compétence"
label_settings = SubResource("LabelSettings_aw74w")
autowrap_mode = 2

[node name="Level" type="Label" parent="Main/MainContent/Info/Info_base"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Level: 20
"
label_settings = SubResource("LabelSettings_eup3v")
vertical_alignment = 1

[node name="MarginBuyButton" type="MarginContainer" parent="Main/MainContent/Info"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 50

[node name="BuyButton" type="Button" parent="Main/MainContent/Info/MarginBuyButton"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("1_m7kia")
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxTexture_m8evj")
text = "800
"

[connection signal="pressed" from="Main/MainContent/Info/MarginBuyButton/BuyButton" to="." method="_on_buy_button_pressed"]
